kube/registry/dreg.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dreg
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dreg
  template:
    metadata:
      labels:
        app: dreg
    spec:
      containers:
        - name: dreg
          image: registry
          ports:
            - containerPort: 5000
          volumeMounts:
            - name: dreg
              mountPath: /var/lib/registry
      volumes:
        - name: dreg
          persistentVolumeClaim:
            claimName: dreg
---
apiVersion: v1
kind: Service
metadata:
  name: dreg
spec:
  type: NodePort
  selector:
    app: dreg
  ports:
    - port: 10000
      targetPort: 5000
      nodePort: 10000
